[package]
name = "ipfs_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "numeric", "uuid"] }
dotenv = "0.15.0"
chrono = {version = "0.4", features = ["serde"]}
actix-identity = "0.3"
env_logger = "0.8"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8.9"
rust-argon2 = "0.8"
uuid = { version= "0.8 ", features = ["serde", "v4"] } 